@@ -15,6 +15,10 @@ tlst-private-description=Private tasks are visible only to you
 tlst-private=Private [img=info]
 tlst-private-switch-description=Tasks visible only to you
 tlst-show-completed=Show completed
+tlst-status-in-progress-high=In progress (high priority)
+tlst-status-in-progress-low=In progress (low priority)
+tlst-status-not-started=Not started
+tlst-status=Status
 tlst-subtask-of=Subtask of "__1__"
 tlst-tasks=Tasks
 tlst-title=Title
