@@ -1,7 +1,9 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.1
 Date: ????
-  Changes:
+  Features:
+    - Added task status, which can be one of `not started`, `in progress (low priority)` and `in progress (high priority)`
+      - Status can be adjusted in the edit task dialog, or by clicking the status icon in the tasks GUI
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.0
 Date: 2021-11-11
